--- a/source/css/welcome_page.styl
+++ b/source/css/welcome_page.styl
@@ -252,4 +252,27 @@ html.no-js .welcome-container
   height: auto
   transition: transform 0.3s
   &:hover
-    transform: scale(1.1) 
+    transform: scale(1.1)
+
+.scroll-hint-container
+  display: flex
+  flex-direction: column
+  align-items: center
+  position: relative
+  text-align: center
+  margin-top: -20px
+
+.text-container
+  margin-bottom: 0px
+  width: 100%
+  color: rgba(0,0,0,0.6)
+
+.arrow-container
+  height: 20px
+  width: 100%
+  text-align: center
+  margin-bottom: 15px
+
+.scroll-arrow
+  transition: transform 0.75s ease
+  color: rgba(0,0,0,0.6) 
