feat: 优化欢迎页面社交链接的加载属性
- 在欢迎页面的社交链接中添加了 no-lazy 属性，提升了社交图标的加载性能。
- 调整了社交图标的 HTML 结构，确保属性的一致性和可读性。

--- a/layout/_partial/welcome_content.ejs
+++ b/layout/_partial/welcome_content.ejs
@@ -33,21 +33,21 @@
       
       <div class="avatar-container">
         <div class="avatar">
-          <img src="/images/avatar/avatar.jpg" alt="<%= config.author %>" no-lazy>
+          <img no-lazy src="/images/avatar/avatar.jpg" alt="<%= config.author %>" no-lazy>
         </div>
         
         <div class="social-icons">
-          <a href="mailto:forsertee@foxmail.com" title="Email">
-            <img src="/images/logo/icons8-email-50.png" alt="Email" no-lazy>
+          <a no-lazy href="mailto:forsertee@foxmail.com" title="Email">
+            <img no-lazy src="/images/logo/icons8-email-50.png" alt="Email" no-lazy>
           </a>
-          <a href="https://github.com/FengEternity" title="GitHub" class="github-icon">
-            <img src="/images/logo/icons8-github-50.png" alt="GitHub" no-lazy>
+          <a no-lazy href="https://github.com/FengEternity" title="GitHub" class="github-icon">
+            <img no-lazy src="/images/logo/icons8-github-50.png" alt="GitHub" no-lazy>
           </a>
-          <a href="https://www.montylee.cn/rss/atom.xml" title="RSS">
-            <img src="/images/logo/icons8-rss-50.png" alt="RSS" no-lazy>
+          <a no-lazy href="https://www.montylee.cn/rss/atom.xml" title="RSS">
+            <img no-lazy src="/images/logo/icons8-rss-50.png" alt="RSS" no-lazy>
           </a>
-          <a href="https://fengeternity.github.io/love/index.html" title="LOVE">
-            <img src="/images/logo/icons8-love-48.png" alt="LOVE" no-lazy>
+          <a no-lazy href="https://fengeternity.github.io/love/index.html" title="LOVE">
+            <img no-lazy src="/images/logo/icons8-love-48.png" alt="LOVE" no-lazy>
           </a>
         </div>
       </div>
