feat: 更新导航栏链接以提升用户体验

--- a/layout/_partial/main/navbar/nav_tabs_blog.ejs
+++ b/layout/_partial/main/navbar/nav_tabs_blog.ejs
@@ -40,7 +40,7 @@ function layoutDiv() {
   el += '<div class="submenu">';
   el += '<a href="https://www.travellings.cn/go.html" target="_blank">开往</a>';
   el += '<a href="https://foreverblog.cn/go.html" target="_blank">虫洞</a>';
-  el += '<a href="https://zhblogs.cn/random" target="_blank">中文博客列表</a>';
+  el += '<a href="https://travel.moe/go.html?travel=on" target="_blank">跃迁</a>';
   el += '</div>';
   el += '</div>';
 
