feat: 优化布局和小部件样式以提升用户体验
- 修改了布局文件，调整了侧边栏的宽度设置，确保更好的响应式设计。
- 更新了时间线小部件的样式，增加了相对定位和自动溢出处理，提升了内容的可读性和交互性。

--- a/source/css/_components/widgets/timeline.styl
+++ b/source/css/_components/widgets/timeline.styl
@@ -1,4 +1,5 @@
 .widgets .widget-wrapper.timeline
+  position: relative
   .tag-plugin.timeline
     padding-left: 0 !important
     &:before
@@ -6,8 +7,10 @@
       width: 2px !important
       background: var(--block-hover) !important
   .widget-body
-    overflow: hidden
+    overflow: auto
     padding: 0 var(--gap-padding)
+    position: relative
+    height: calc(100vh - 200px)
   .tag-plugin.timeline .timenode
     position: relative
     z-index: 1
