--- a/source/css/_components/layout.styl
+++ b/source/css/_components/layout.styl
@@ -1,6 +1,6 @@
 .l_body
   display: grid
-  grid-template-columns: 1fr minmax(200px,var(--width-main)) 1fr
+  grid-template-columns: var(--width-sidebar) minmax(200px,var(--width-main)) var(--width-sidebar)
   grid-gap: var(--gap-margin)
   margin: auto
   font-size: var(--fsp)
@@ -20,10 +20,13 @@
 .l_body .l_right
   justify-self: left
   --gap-margin: 0px
-  max-height: calc(100% - 8px * 2)
   .widgets
+    position: fixed
+    width: var(--width-sidebar)
+    top: 8px
+    max-height: calc(100vh - 16px)
+    overflow-y: auto
     height: 100%
-    overflow visible
 
 // 平板布局
 @media screen and (max-width: $device-laptop)
