--- a/source/css/welcome_page.styl
+++ b/source/css/welcome_page.styl
@@ -152,11 +152,11 @@ body
 .code-block
   margin: 15px 0
   margin-top: 0px
+  margin-bottom: 0px
   background-color: #f8f8f8
   border-radius: 10px
   overflow: hidden
   position: relative
-  box-shadow: 0 1px 3px rgba(0,0,0,0.05)
   width: 100%
   max-width: 600px
   margin-left: 0
@@ -168,7 +168,7 @@ body
 
 .code-block pre
   margin: 0
-  padding: 15px
+  padding: 12px 15px
   overflow-x: auto
   background: transparent
   text-align: left
