--- a/source/css/_custom.styl
+++ b/source/css/_custom.styl
@@ -156,23 +156,21 @@ $boxshadow-toast = 0 4px 8px 0px rgba(0, 0, 0, 0.1), 0 12px 16px -4px rgba(0, 0,
   &:not([rightbar])
     display: flex
     justify-content: center
-    width: 100%
+    max-width: calc(var(--width-main) + var(--side-content-width) + var(--gap-l))
     margin: 0 auto
+    padding: 0 1rem
+    
+    .l_main
+      margin: 0 auto
+      width: var(--width-main)
 
 // 主页布局样式
 .l_body.index
   display: flex
   justify-content: center
-  width: 100%
-  
-  // 内容容器
-  .body-wrap
-    display: flex
-    justify-content: center
-    max-width: calc(var(--width-main) + var(--side-content-width) + var(--gap-l))
-    width: 100%
-    padding: 0 1rem
-    margin: 0 auto
+  max-width: calc(var(--width-main) + var(--side-content-width) + var(--gap-l))
+  margin: 0 auto
+  padding: 0 1rem
   
   // 左侧栏样式
   .l_left
@@ -191,9 +189,9 @@ $boxshadow-toast = 0 4px 8px 0px rgba(0, 0, 0, 0.1), 0 12px 16px -4px rgba(0, 0,
     
   // 响应式布局 - 根据内容宽度自适应
   @media screen and (max-width: calc(var(--width-main) + var(--side-content-width) + var(--gap-l) * 2))
-    .body-wrap
-      max-width: var(--width-main)
-      
+    max-width: var(--width-main)
+    padding: 0 1rem
+    
     .l_left
       display: none
     
@@ -203,13 +201,9 @@ $boxshadow-toast = 0 4px 8px 0px rgba(0, 0, 0, 0.1), 0 12px 16px -4px rgba(0, 0,
       max-width: var(--width-main)
       margin: 0 auto
       
-      .post-list
-        width: 100%
-        
   // 特小屏幕适配
   @media screen and (max-width: $device-mobile)
-    .body-wrap
-      padding: 0 0.5rem
+    padding: 0.5rem
 
 // 隐藏右侧边栏切换按钮
 .rightbar-toggle
