--- a/source/css/_components/partial/paginator.styl
+++ b/source/css/_components/partial/paginator.styl
@@ -5,20 +5,21 @@
   align-items: center
   font-size: 1rem
   font-weight: 700
-  background: var(--card)
+  background: transparent !important
   border-radius: $border-card
   overflow: hidden
-  box-shadow: 0 2px 8px 0px rgba(0, 0, 0, 0.03)
+  box-shadow: none
   color: var(--text-p3)
   .page-number
     padding: 4px 8px
     border-radius: 8px
     margin: 2px
+    background: transparent
   a.page-number
     color: var(--text-p3)
     &:hover
       color: var(--text-p1)
-      background: var(--block)
+      background: rgba(128, 128, 128, 0.1)
   .extend
     text-align: center
     background-size: contain
@@ -27,14 +28,14 @@
     background-origin: content-box
     background-clip: content-box
     &.next
-      border-left: 1px dashed var(--block-border)
+      border-left: none
       background-image: url(hexo-config('style.paginator.next'))
     &.prev
-      border-right: 1px dashed var(--block-border)
+      border-right: none
       background-image: url(hexo-config('style.paginator.prev'))
   .current
     font-family: $ff-code
-    background: var(--block)
+    background: rgba(128, 128, 128, 0.1)
   .extend
     padding: 1rem
     line-height: 0
