--- a/source/css/welcome_page.styl
+++ b/source/css/welcome_page.styl
@@ -122,7 +122,7 @@ body
 .subtitle
   font-size: 1rem
   margin: 15px 0 10px
-  margin-bottom: 0px
+  margin-bottom: 10px
   color: var(--text-p1)
   display: flex
   align-items: center
@@ -132,7 +132,7 @@ body
   animation-delay: 1.2s
 
 .role-work
-  font-size: 0.8rem
+  font-size: 1.0rem
   margin: 5px 0
   color: var(--text-p2)
   line-height: 0.8
@@ -153,7 +153,7 @@ body
   margin: 15px 0
   margin-top: 0px
   margin-bottom: 0px
-  background-color: #f8f8f8
+  background-color: var(--block)
   border-radius: 10px
   overflow: hidden
   position: relative
@@ -165,6 +165,7 @@ body
   opacity: 0
   animation: scaleIn 0.8s ease forwards
   animation-delay: 1.6s
+  box-shadow: none !important
 
 .code-block pre
   margin: 0
@@ -387,6 +388,9 @@ html.no-js .welcome-container
   transition: transform 0.75s ease
   color: rgba(0,0,0,0.6)
 
+.animated-elements
+  animation-fill-mode: forwards
+
 .title,
 .role-work,
 .subtitle,
@@ -395,7 +399,7 @@ html.no-js .welcome-container
 .avatar,
 .social-icons,
 .scroll-hint-container
-  animation-fill-mode: forwards
+  @extend .animated-elements
 
 @keyframes fadeInUp
   from
