--- a/layout/_partial/main/navbar/nav_tabs_blog.ejs
+++ b/layout/_partial/main/navbar/nav_tabs_blog.ejs
@@ -27,7 +27,7 @@ function layoutDiv() {
   el += '<a href="/about/">关于</a>';
   el += '<div class="submenu">';
   el += '<a href="/about/">关于</a>';
-  el += '<a href="/2024/05/07/hello-world/">博客</a>';
+  el += '<a href="/blogAbout/">博客</a>';
   el += '<a href="https://fengeternity.github.io/love/index.html">LOVE</a>';
   el += '<a href="/friends/">友链</a>';
   el += '<a href="/rss/atom.xml">订阅</a>';
