--- a/source/css/welcome_page.styl
+++ b/source/css/welcome_page.styl
@@ -19,11 +19,25 @@ body
   align-items: center
   justify-content: space-between
   background-color: var(--site-bg)
+  background-image: url('/images/background.png')
+  background-size: cover
+  background-position: center
+  background-repeat: no-repeat
+  background-attachment: fixed
   transition: transform 0.6s cubic-bezier(0.65, 0, 0.35, 1)
   z-index: 10
   overflow-y: auto
   opacity: 0
   transform: translateY(20px)
+  &::before
+    content: ''
+    position: absolute
+    top: 0
+    left: 0
+    right: 0
+    bottom: 0
+    background-color: rgba(255, 255, 255, 0.85)
+    z-index: 1
   &.loaded
     opacity: 1
     transform: translateY(0)
@@ -283,6 +297,8 @@ body
   .code-block code
     font-size: 12px
     padding: 10px
+  .welcome-container
+    background-attachment: scroll
 
 @media (max-width: 480px)
   .content-wrapper
