feat: 更新欢迎页面和样式以提升视觉效果
- 移除了欢迎页面中的代码块，简化内容展示，增强可读性。
- 调整了欢迎页面的字体大小和样式，确保在不同设备上的适配性。
- 为页脚添加了响应式优化，提升在小屏幕设备上的用户体验。
- 更新了相关样式，确保整体视觉效果更加协调。

--- a/layout/_partial/welcome_content.ejs
+++ b/layout/_partial/welcome_content.ejs
@@ -10,25 +10,9 @@
           <em>BSP Enginner at <a href="http://www.thundersoft.com">Thundersoft</a><span class="emoji">💻</span></em>
         </p>
 
-        
-        <h3 class="subtitle">A little more about me...</h3>  
-
-        <div class="code-block">
-          <pre><code><span style="color:#0000ff">const</span> <span style="color:#267f99">myProfile</span> = {
-  <span style="color:#267f99">code</span>: [<span style="color:#ce9178">C++</span>, <span style="color:#ce9178">C</span>, <span style="color:#ce9178">Python</span>, <span style="color:#ce9178">Java</span>, <span style="color:#ce9178">JavaScript</span>, <span style="color:#ce9178">HTML</span>, <span style="color:#ce9178">CSS</span>],
-  <span style="color:#267f99">tools</span>: [<span style="color:#ce9178">Visual Studio</span>, <span style="color:#ce9178">Git</span>, <span style="color:#ce9178">CMake</span>, <span style="color:#ce9178">CLion</span>, <span style="color:#ce9178">Linux</span>],
-  <span style="color:#267f99">interests</span>: [<span style="color:#ce9178">"Multithreading"</span>, <span style="color:#ce9178">"Network Programming"</span>, <span style="color:#ce9178">"Image Processing"</span>, <span style="color:#ce9178">"Deep Learning"</span>],
-  <span style="color:#267f99">techCommunities</span>: {
-                      <span style="color:#9cdcfe">Member</span>: <span style="color:#ce9178">"NJUPT SAST"</span>,
-                      <span style="color:#9cdcfe">Developer</span>: <span style="color:#ce9178">"FileTAG"</span>, <span style="color:#ce9178">"IntelliSearch"</span>
-                    },
-  <span style="color:#267f99">challenge</span>: <span style="color:#ce9178">"Frantically coding away, trying to package myself for the job market!"</span>
-}</code></pre>
-        </div>
-
-        <!-- <p class="footer-text">
-          An programmer who loves photography, traveling and occasionally writes calligraphy. :)
-        </p> -->
+        <p class="footer-text">
+          An programmer who loves photography, traveling and occasionally writes calligraphy. 
+        </p>
       </div>
       
       <div class="avatar-container">
@@ -56,7 +40,7 @@
   
   <div class="scroll-hint-container">
     <div class="text-container">
-      <span id="random-think" style="font-size: 0.7em; color: rgba(0,0,0,0.6);">向下滑动进入博客</span>
+      <span id="random-think" style="font-size: 0.7em; color: rgba(0,0,0,0.85);">向下滑动进入博客</span>
     </div>
     <div class="arrow-container">
       <svg class="scroll-arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="18" height="18">
